--- a/src/main/resources/templates/admin/Container/User/ContainerUserList.html
+++ b/src/main/resources/templates/admin/Container/User/ContainerUserList.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/admin/styles.css">
@@ -11,11 +12,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+
     <script src="/js/admin/User/ContainerUserList.js"></script>
     <div class="container-userlist">
         <div class="div-userlist-title">
@@ -88,57 +90,60 @@
             </div>
             <table class="table table-dark table-striped table-hover">
                 <thead>
-                <!-- 11개 UserVO 내용 다 가져오기-->
                 <tr>
-                    <th scope="col">번호</th>
-                    <th scope="col">이름</th>
-                    <th scope="col">아이디</th>
-                    <th scope="col">비밀번호</th>
-                    <th scope="col">생년월일</th>
-                    <th scope="col">성별</th>
-                    <th scope="col">닉네임</th>
-                    <th scope="col">생성일자</th>
-                    <th scope="col">거주지</th>
-                    <th scope="col">핸드폰번호</th>
-                    <th scope="col">포인트</th>
+                    <th scope="col"><input type="checkbox" id="selectAllCheckbox" /></th>
+                    <th class="col-no" scope="col">번호</th>
+                    <th class="col-name" scope="col">이름</th>
+                    <th class="col-id" scope="col">아이디</th>
+                    <th class="col-pwd" scope="col">비밀번호</th>
+                    <th class="col-birth" scope="col">생년월일</th>
+                    <th class="col-gender" scope="col">성별</th>
+                    <th class="col-nickname" scope="col">닉네임</th>
+                    <th class="col-regdate" scope="col">생성일자</th>
+                    <th class="col-location" scope="col">거주지</th>
+                    <th class="col-phone" scope="col">핸드폰번호</th>
+                    <th class="col-point" scope="col">포인트</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    <th scope="row">1</th>
-                    <td>Mardddddddddddddddk</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                <tr th:each="user : ${userList}" >
+                    <td><input type="checkbox" th:value="${user.userno}" name="userCheckbox"/></td>      <th scope="row" th:text="${user.userno}" data-bs-toggle="modal" data-bs-target="#model-${user.userno}"></th>
+                    <th scope="row" th:text="${user.userno}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></th>
+                    <td th:text="${user.u_name}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.id}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.pwd}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.date_birth}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.gender}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.nickname}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.date_reg}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.residence}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.phone}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    <td th:text="${user.point}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
                 </tr>
-                </tbody>
             </table>
         </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-         aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
+    <div th:each="user : ${userList}">
+        <div class="modal fade" th:id="'model-' + ${user.userno}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="'label-' + ${user.userno}" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" th:id="'label-' + ${user.userno}" th:text="${user.u_name} + '님의 상세정보'">    </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary-update">수 정</button>
+                        <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">삭 제</button>
+                    </div>
                 </div>
             </div>
         </div>
