--- a/src/main/resources/templates/admin/User/UserList.html
+++ b/src/main/resources/templates/admin/User/UserList.html
@@ -7,6 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Test</title>
+  <link rel="stylesheet" href="/css/admin/User/ContainerUserList.css">
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
   <div th:include="admin/Side/Sidebar.html"></div>
 
   <!-- 메인 컨테이너 -->
-  <div th:include="admin/Container/User/ContainerUserList.html"></div>
+  <div class ="ContainerUserList"th:include="admin/Container/User/ContainerUserList.html"></div>
 </main>
 
 </body>
